@@ -345,11 +345,11 @@
       "icon": "https://play-lh.googleusercontent.com/yN6cCSP7UB_2bsvlCxrtv-FUpEt1IvEFwr0Ucb3wr39QsAd5PLsueSVXuCinDbE4rifhMlX4YNtpLpkGnpsLhCQ"
     },
     {
-      "name": "Lost Sword",
+      "name": "Lost Sword: Half-Anniversary",
       "user_id": "200292489",
       "category": "Gacha",
       "description": "No description provided",
-      "icon": "https://play-lh.googleusercontent.com/VxizOyxX-TVUJeDpMvxZJf-iqm_WE1H_VP34O4rkXuc_7TNDnlxnwNOfZ3IIgzglilqZ"
+      "icon": "https://play-lh.googleusercontent.com/zkP4sKdzyTuDgPqa6hZWieC4eHRT3e8MOlwdUnD-OpQSR9ju1P5q7HVpy6rL8HNNLlwIWMCXAnuTso7I9-Sz7I0"
     },
     {
       "name": "Eversoul",
