@@ -1,7 +1,7 @@
 {
-  "fetched_at": "2026-01-07T22:24:22.678754+08:00",
-  "date": "2026-01-07",
-  "time": "22:24:22",
+  "fetched_at": "2026-01-08T20:24:41.543361+08:00",
+  "date": "2026-01-08",
+  "time": "20:24:41",
   "id": "UCPrdw58ZZXJyKYXdcCGViWw",
   "title": "Jaytrixia - Videos",
   "channel_url": "https://www.youtube.com/@Jaymantrix",
